Modify <header> element to avoid overflow

--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
   padding: 0 30px;
   background-color: #fff;
   background-image: url('./assets/mobile/header-shapes-mobile.png');
